--- a/package.xml
+++ b/package.xml
@@ -13,9 +13,11 @@
   <exec_depend>ros_gz_bridge</exec_depend>
   <exec_depend>ros_gz_sim</exec_depend>
   <exec_depend>rviz2</exec_depend>
+  <exec_depend>ros2_control</exec_depend>
+  <exec_depend>gz_ros2_control</exec_depend>
   <exec_depend>sdformat_urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
-  <exec_depend>position_controller</exec_depend>
+  <exec_depend>position_controllers</exec_depend>
   <exec_depend>rclpy</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
